syntax="proto3";

package calculator;

option go_package="/calculatorpb";

message Data{
    int32 firstNum = 1;
    int32 secondNum = 2;
}

message SumRequest{
    Data data = 1;
}
message SumResponse{
    int32 result = 1;
}



message PrimeNumberDecompositionRequest{
    int64 num = 1;
}
message PrimeNumberDecompositionResponse{
    int64 res = 1;
}



message ComputeAverageRequest{
    int32 num = 1;
}
message ComputeAverageResponse{
    double res = 1;
}


message FindMaximumRequest{
    int64 num = 1;
}
message FindMaximumResponse{
    int64 curr_Max = 1;
}

service CalculatorService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse){};

    // Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){}

    // Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){}

    // BiDi Streaming
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse){}

}